global.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-family: sans-serif;
}

body {
  display: grid;
  grid-template-rows: auto 1fr;
  min-height: 100vh;

  background-color: oklch(0.7918 0.1143 78.46);
  line-height: 1.5;
}

.header {
  padding-top: 4rem;
  margin: 0 auto;
}

.header__title {
  font-size: 4rem;
  color: oklch(100% 0% 0);
  text-align: center;
}

.recipes {
  width: min(1366px, 100%);
  margin: 0 auto;
  padding: 2rem;
}

.recipes__list {
  width: 100%;

  display: grid;
  grid-gap: 2rem;
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));

  list-style-type: none;
}

.recipe {
  text-decoration: none;

  display: flex;
  flex-direction: column;
  align-items: center;

  border-radius: 16px;
  box-shadow: 0px 4px 8px 2px oklch(0% 0% 0 / 20%);
  transition: all 0.2s ease;

  &:hover,
  &:active,
  &:target {
    box-shadow: 0px 6px 10px 4px oklch(0% 0% 0 / 20%);
    transform: translateY(-4px);
    scale: 1.02;
  }
}

.recipe__image {
  aspect-ratio: 4/5;

  border-top-left-radius: inherit;
  border-top-right-radius: inherit;

  width: 100%;
  object-fit: cover;
}

.recipe__title {
  padding: 1rem;
  font-size: 1.5rem;

  color: oklch(100% 0% 0);
}

